la premiere version du test unitaire  pour la fnction deposer annonce + la fonctionnalité du web scraping

--- a/annonces/templates/annonces.html
+++ b/annonces/templates/annonces.html
@@ -13,7 +13,7 @@
     </table>
     <br><br>
     <div style="text-align:center">
-        <input type="submit" />
+        <input type="submit" id="submit_button"/>
     </div>
 </form>
 {% endblock %}
