--- a/TPIGL-front/src/App.css
+++ b/TPIGL-front/src/App.css
@@ -18,6 +18,9 @@ body {
   font-family: var(--font-outfit);
   background-image: url("./images/Background circles.svg");
   background-size: cover;
+  margin: 0px;
+  margin: 0px;
+  min-height: 100vh;
   display:flex; 
   flex-direction:column;
   overflow-y:scroll;
@@ -772,6 +775,18 @@ display: flex;
 align-items: center;
 text-align: center
 ;margin-left: 20px;
+}
+
+.location-form-1-champ-map{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.location-form-1-champ-map > div{
+    margin-top: 30px;
+    height:250px;
+    width: 600px;
+    border: solid #BEBEBE 1px;
 }
 /*
 .movie div:nth-of-type(1) {
