--- a/TPIGL-front/src/pages/Home.css
+++ b/TPIGL-front/src/pages/Home.css
@@ -82,6 +82,8 @@ background: url(../images/vertical-low-angle-shot-of-white-concrete-building.png
 
   padding: 20px;
   text-align: center;
+  text-decoration: none;
+  color: #000;
 }
 
 .H3{
@@ -97,13 +99,39 @@ background: url(../images/vertical-low-angle-shot-of-white-concrete-building.png
   text-align: center;
 }
 .container-pourquoi{
-  background-color: #000;
   position:absolute;
   width: 826px;
   height: 366px;
   top: 320%;
   left: 22%;
-
+}
+.img > p{
+  position: relative;
+  font-size: 40px;
+  color: #fff;
+  left: 27%;
+  top: 37%;
+}
+.container-pourquoi > .img{
+  height:350px;
+  width:826px;
+  background-image: url("../images/pourquoi.jpg")
+}
+.container-pourquoi > .reasons{
+  display:flex;
+  position: relative;
+  justify-content: space-between;
+  bottom: 20%;  
+  width: 100%;
+  height: 250px;
+  
+  padding: 0 50px;;
+}
+.reason1, .reason2, .reason3{
+  height: 150px;
+  width: 150px;
+  transform: rotate(-45deg);
+  background-color: #fff; 
 }
 .search_container{
 }
